# LLVM-IR

./: .gitignore  Readme.org  hello.cpp  loop.cpp  mpi_loop.cpp
Hello_Pass/: CMakeLists.txt  HelloWorld.h  PassRegistry.def  function_pass.cpp  function_pass.h
Hello_Pass/hello_pass/: CMakeLists.txt  Hello.cpp
ops_pass/: CMakeLists.txt  profilingfunctions.cpp  profilingfunctions.h
ops_pass/src/: CMakeLists.txt  opspass.cpp
